--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,8 @@ billing_data/migrations/*
 dag_section_data/migrations/*
 !dag_section_data/migrations/__init__.py
 
+report_data/migrations/*
+!report_data/migrations/__init__.py
+
 
 venv
